<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_notes">Notes</string>
    <string name="title_books">Books</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Untitled</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="nickname">Nickname</string>
    <string name="delete_task">Delete task?</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="this_field_must_be_filled">This field must be filled</string>
    <string name="required">Required</string>
    <string name="phone_number">Phone number</string>
    <string name="send_code">Send code</string>
    <string name="accept">Accept</string>
    <string name="code">Code</string>
    <string name="any_error">Something went wrong</string>
    <string name="code_kg">+996</string>
    <string name="email">Email</string>
    <string name="task">Task</string>
    <string name="manager">Manager</string>
    <string name="exit">Exit</string>
    <string name="book">Book</string>
    <string name="author">Author</string>
    <string name="message">Message</string>
</resources>