<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.taskmanager.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.taskmanager.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskmanager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.taskmanager.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.taskmanager.ui.task.AddTaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_add_task" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.taskmanager.ui.onboarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />
    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.taskmanager.ui.auth.phone.PhoneFragment"
        android:label="fragment_phone"
        tools:layout="@layout/fragment_phone" />
    <fragment
        android:id="@+id/verifyFragment"
        android:name="com.example.taskmanager.ui.auth.verify.VerifyFragment"
        android:label="fragment_verify"
        tools:layout="@layout/fragment_verify" />
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.taskmanager.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" />
    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.example.taskmanager.ui.book.AddBookFragment"
        android:label="Book"
        tools:layout="@layout/fragment_add_book" />
</navigation>