<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.AuthFragment">


    <TextView
        android:id="@+id/tv_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textColor="@color/black"
        android:textSize="52sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/btn_login_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/tv_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:textColor="@color/black"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_task"
        app:layout_constraintTop_toTopOf="@id/tv_task"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"

        app:layout_constraintVertical_bias="0.528" />

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="82dp"
        android:text="@string/email"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_google"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@id/btn_login_phone"
        app:layout_constraintStart_toStartOf="@id/btn_login_phone"
        app:layout_constraintTop_toBottomOf="@id/btn_login_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>