<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.phone.PhoneFragment">

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/phoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:prefixText="@string/code_kg"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        android:hint="@string/phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:layout_constraintStart_toStartOf="@id/phoneContainer"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        app:layout_constraintEnd_toEndOf="@id/phoneContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send"
        android:layout_marginTop="32dp"
        android:text="@string/send_code"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>