<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context=".ui.task.AddTaskFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/asfalt"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="4dp"
            android:hint="@string/title"
            app:errorEnabled="true"

            app:errorIconDrawable="@drawable/ic_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/asfalt"
        >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="23"
            />

    </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/save"/>

</LinearLayout>